syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.zup";
option java_outer_classname = "DesafioPix";
option objc_class_prefix = "HLW";

package br.com.zup;

service DesafioPixService {
  rpc cadastra (ChavePixRequest) returns (ChavePixResponse) {}
}

enum TipoChave {
  TIPO_CHAVE_UNKNOWN = 0;
  CPF = 1;
  TELEFONE_CELULAR = 2;
  EMAIL = 3;
  CHAVE_ALEATORIA = 4;
}

enum TipoConta {
  TIPO_CONTA_UNKNOWN = 0;
  CONTA_CORRENTE = 1;
  CONTA_POUPANCA = 2;
}

message ChavePixRequest {
  string clientId = 1;
  TipoChave tipoChave = 2;
  string chavePix = 3;
  TipoConta tipoConta = 4;

}

message ChavePixResponse {
  int64 pixId = 1;
}